[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "gsppy"
version = "3.1.1"
description = "GSP (Generalized Sequence Pattern) algorithm in Python"
keywords = ["GSP", "sequential patterns", "data analysis", "sequence mining"]
license = { file = "LICENSE" }
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
homepage = "https://github.com/jacksonpradolima/gsp-py"
repository = "https://github.com/jacksonpradolima/gsp-py"
authors = [{ name = "Jackson Antonio do Prado Lima", email = "jacksonpradolima@gmail.com" }]
maintainers = [{ name = "Jackson Antonio do Prado Lima", email = "jacksonpradolima@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
]

dependencies = [
    "click>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/jacksonpradolima/gsp-py"

[project.scripts]
gsppy = "gsppy.cli:main"

[project.optional-dependencies]
dev = [
    "cython==3.1.4",
    "hatch==1.15.1",
    "hatchling==1.27.0",
    "mypy==1.18.2",
    "pylint==4.0.2",
    "pyright==1.1.406",
    "pytest==8.4.2",
    "pytest-benchmark==5.1.0",
    "pytest-cov==7.0.0",
    "ruff==0.13.3",
    "tox==4.32.0",
]
rust = [
    "maturin==1.9.6"
]
gpu = [
    "cupy>=11,<14"
]

[tool.hatch.build]
include = ["gsppy/*"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[tool.hatch.build.targets.sdist]
# Basically everything except hidden files/directories (such as .github, .python-version, etc)
include = [
    "/*.toml",
    "/*.json",
    "/*.md",
    "/*.ini",
    "bin/*",
    "gsppy/*",
    "tests/*",
    "rust/**",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
incremental = true
cache_dir = ".mypy_cache"

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # isort
    "I",
    # bugbear rules
    "B",
    # mutable defaults
    "B006",
    # remove unused imports
    "F401",
    # bare except statements
    "E722",
    # unused arguments
    "ARG",
    # print statements
    "T201",
    "T203",
    # misuse of typing.TYPE_CHECKING
    "TCH004",
    # import rules
    "TID251",
]
ignore = [
    # mutable defaults
    "B006",
]
unfixable = [
    # disable auto fix for print statements
    "T201",
    "T203",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["gsp", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["T201", "T203"]
"gsppy/utils.py" = ["TID251"]

[tool.pyright]
# this enables practically every flag given by pyright.
# there are a couple of flags that are still disabled by
# default in strict mode as they are experimental and niche.
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = [
    "gsppy",
]
exclude = [
    "**/__pycache__",
]
# Ensure pyright resolves third-party imports (e.g., pytest) from the project venv
venvPath = "."
venv = ".venv"
reportImplicitOverride = true
reportImportCycles = false
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
xfail_strict = true
filterwarnings = [
    "error"
]

[tool.maturin]
# Build configuration for the optional Rust extension
module-name = "_gsppy_rust"
bindings = "pyo3"
strip = true
compatibility = "manylinux_2_28"
python-packages = ["gsppy"]
python-source = "."
