[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "gsppy"
version = "5.1.0"
description = "GSP (Generalized Sequence Pattern) algorithm in Python"
keywords = ["GSP", "sequential patterns", "data analysis", "sequence mining"]
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
homepage = "https://github.com/jacksonpradolima/gsp-py"
repository = "https://github.com/jacksonpradolima/gsp-py"
authors = [{ name = "Jackson Antonio do Prado Lima", email = "jacksonpradolima@gmail.com" }]
maintainers = [{ name = "Jackson Antonio do Prado Lima", email = "jacksonpradolima@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
]

dependencies = [
    "click>=8.0.0",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/jacksonpradolima/gsp-py"

[project.scripts]
gsppy = "gsppy.cli:main"

[project.optional-dependencies]
dev = [
    "cython==3.2.4",
    "hatch==1.16.3",
    "hatchling==1.28.0",
    "hypothesis==6.151.5",
    "pylint==4.0.4",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-benchmark==5.2.3",
    "pytest-cov==7.0.0",
    "ruff==0.15.0",
    "tox==4.34.1",
    "ty==0.0.14",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-gen-files>=0.5,<1",
    "mkdocs-literate-nav>=0.6,<1",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.26,<1.1",
]
rust = [
    "maturin==1.11.5"
]
gpu = [
    "cupy>=11,<14"
]
dataframe = [
    "polars>=1.37.1",
    "pandas>=3.0.0",
    "pyarrow>=10.0.0",
    "pandas-stubs>=2.3.3.260113"
]

[tool.hatch.build]
include = [
    "gsppy/*",
    "gsppy/py.typed",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[tool.hatch.build.targets.sdist]
# Basically everything except hidden files/directories (such as .github, .python-version, etc)
include = [
    "/*.toml",
    "/*.json",
    "/*.md",
    "/*.ini",
    "bin/*",
    "gsppy/*",
    "gsppy/py.typed",
    "tests/*",
    "rust/**",
]

[tool.ty]
# ty is Astral's fast type checker written in Rust
# Python version is automatically inferred from project.requires-python

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # isort
    "I",
    # bugbear rules
    "B",
    # mutable defaults
    "B006",
    # remove unused imports
    "F401",
    # bare except statements
    "E722",
    # unused arguments
    "ARG",
    # print statements
    "T201",
    "T203",
    # misuse of typing.TYPE_CHECKING
    "TCH004",
    # import rules
    "TID251",
]
ignore = [
    # mutable defaults
    "B006",
]
unfixable = [
    # disable auto fix for print statements
    "T201",
    "T203",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["gsp", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["T201", "T203"]
"gsppy/utils.py" = ["TID251"]

[tool.pyright]
# this enables practically every flag given by pyright.
# there are a couple of flags that are still disabled by
# default in strict mode as they are experimental and niche.
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = [
    "gsppy",
]
exclude = [
    "**/__pycache__",
]
# Ensure pyright resolves third-party imports (e.g., pytest) from the project venv
venvPath = "."
venv = ".venv"
reportImplicitOverride = true
reportImportCycles = false
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
xfail_strict = true
filterwarnings = [
    "error"
]

[tool.maturin]
# Build configuration for the optional Rust extension
module-name = "_gsppy_rust"
bindings = "pyo3"
strip = true
compatibility = "manylinux_2_28"
python-packages = ["gsppy"]
python-source = "."

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
branch = "master"
upload_to_vcs_release = false
upload_to_pypi = false
build_command = "python -m build"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge pull request",
    "^Merge branch"
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
